# orbit

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.e2e.json  vite.config.ts  wdio.conf.ts
.github/workflows/: build.yml  release.yml
audit/: full-audit-report.md
scripts/: release.sh
src/: App.tsx  AppI18nWrapper.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: 4d-coach-prompt.txt  4d-coach-skill.md  orbit-stop-hook.ps1  orbit-stop-hook.sh  orbit-track-usage.sh  session-state.ps1  session-state.sh  statusline.sh
src-tauri/src/: bookmarks.rs  claude.rs  git.rs  lib.rs  logging.rs  main.rs  pty.rs  statusline.rs  terminal.rs  validation.rs  watcher.rs
src/__tests__/core/: helpers.test.ts  store.test.ts
src/core/: api.ts  persistence.ts  store.ts  types.ts
src/features/: CommandPalette.tsx  PromptCoach.tsx  UpdateBanner.tsx  updater.ts
src/hooks/: useAppInit.ts  useBookmarkFilter.ts  useSessionStatePoller.ts  useThemeSync.ts
src/i18n/: en.json  fr.json  i18n.tsx
src/keyboard/: keyboardHandler.ts
src/layout/: ContextBar.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx
src/lib/: analytics.ts  diffParser.ts  logger.ts  platform.ts  terminalParser.ts  themes.ts
src/modals/: AppModals.tsx  NewProjectModal.tsx  PreferencesModal.tsx
src/shared/: ErrorBoundary.tsx  FocusTrap.tsx  InlineRename.tsx
src/styles/: base.css  features.css  layout.css  modals.css  status.css  terminal.css
tests/computer-use/: index.ts
(+34 files in other folders)
